Fixed View on small screens

--- a/QuickMessApp/public/css/index.css
+++ b/QuickMessApp/public/css/index.css
@@ -11,12 +11,12 @@
 
 .profile_container .wrapper {
     max-width: 75%;
-    margin: auto;
+    margin: 0;
 }
 
 .profile_container h1 {
     color: #555;
-    margin: 3rem 0 1rem 0;
+    margin: 1rem 0 1rem 0;
     padding: 0;
     font-size: 1.5rem;
 }
