--- a/QuickMessApp/public/css/style.css
+++ b/QuickMessApp/public/css/style.css
@@ -15,7 +15,18 @@ footer, nav {
 li a:hover {
     background: rgb(255, 145, 0);
     color: white;
+    animation: fadeIn 0.5s ease-in-out;
 }
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 li a {
     color: orange;
 }
@@ -50,11 +61,13 @@ input[type='radio']:checked:after {
 }
 
 #container {
-    min-height: 90%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 #main {
-    overflow: auto;
+    flex-grow: 1;
 }
 
 
@@ -90,6 +103,18 @@ h1{
     border-radius: 25px;
 }
 
+
+@media (max-width: 767px){
+    #left_box{
+        margin-left: 0!important;
+    }
+    #middle_box{
+        margin-left: 0!important;
+    }
+    #right_box{
+        margin-left: 0!important;
+    }
+}
 #left_box{
     border-radius: 25px;
 }
@@ -101,4 +126,5 @@ h1{
 #chat_container{
     padding-top: 0px!important;
 }
+
 
